force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Scrum_Team__c/fields/agf__Type__c.field-meta.xml
<CustomField>
    <fullName>agf__Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Program</fullName>
                <default>true</default>
                <label>Program</label>
            </value>
            <value>
                <fullName>Program of Programs</fullName>
            </value>
            <value>
                <fullName>Portfolio</fullName>
            </value>
            <value>
                <fullName>Workrgoup</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>