force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Scrum_Team__c/fields/agf__Velocity_Type__c.field-meta.xml
<CustomField>
    <fullName>agf__Velocity_Type__c</fullName>
    <defaultValue>(&quot;Story Points&quot;)</defaultValue>
    <label>Velocity Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Story Points</fullName>
                <default>true</default>
                <label>Story Points</label>
            </value>
            <value>
                <fullName>Record Count</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>