force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Scrum_Team__c/fields/agf__Vision__c.field-meta.xml
<CustomField>
    <fullName>agf__Vision__c</fullName>
    <inlineHelpText>The reason why this program exists. Ultimately what is this program accomplishing.</inlineHelpText>
    <label>Vision</label>
    <length>5000</length>
    <type>Html</type>
</CustomField>