force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Scrum_Team__c/recordTypes/agf__Program.recordType-meta.xml
<RecordType>
    <fullName>agf__Program</fullName>
    <active>true</active>
    <description>Used to create Program teams or Programs/Workgroups</description>
    <label>Program Team</label>
</RecordType>