force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Scrum_Team__c/recordTypes/agf__Scrum_Team.recordType-meta.xml
<RecordType>
    <fullName>agf__Scrum_Team</fullName>
    <active>true</active>
    <description>Used to create teams of type scrum team</description>
    <label>Scrum Team</label>
</RecordType>